# cocapn-pipeline

./: README.md  pyproject.toml  setup.py
src/cocapn_pipeline/: __init__.py  pipeline.py  sink.py  tap.py  transform.py
src/cocapn_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
